# axum-examples

./: .gitignore  Cargo.toml  readme.md
auth-axum-login/: Cargo.toml  build.rs  readme.md
auth-axum-login/src/: config.rs  ctx.rs  db.rs  main.rs  migrations.rs  notes.rs  state.rs  users.rs  views.rs
auth-axum-login/src/app/: app.rs  ctx.rs  mod.rs  state.rs
auth-axum-login/src/auth/: backend.rs  errors.rs  github.rs  mod.rs  routes.rs
auth-axum-login/src/db/: mod.rs
auth-axum-login/src/notes/: handlers.rs  mod.rs  model.rs  routes.rs
auth-axum-login/src/shared/: mod.rs  tracing.rs
auth-axum-login/src/users/: auth.rs  mod.rs
auth-axum-login/src/views/: login.html  note-edit.html  notes.html  page.html
crud-sqlite-htmx/: Cargo.toml  readme.md
crud-sqlite-htmx/src/: db.rs  errors.rs  main.rs  migrations.rs  notes.rs
crud-sqlite-htmx/src/views/: base.html  notes.html
crud-sqlite-openapi/: Cargo.toml  readme.md
crud-sqlite-openapi/src/: app.rs  config.rs  ctx.rs  errors.rs  main.rs  openapi.rs  state.rs
crud-sqlite-openapi/src/db/: db.rs  migrations.rs  mod.rs
crud-sqlite-openapi/src/notes/: handlers.rs  mod.rs  model.rs  routes.rs  routes_api.rs
js-deno/: Cargo.toml  api.http  api.hurl  readme.md
js-deno/src/: js.rs  main.rs
js-quickjs-rusty/: Cargo.toml  api.hurl  readme.md
js-quickjs-rusty/src/: js.rs  main.rs
js-quickjs-rusty/src-ts/: sum.ts
js-rusty-v8/: Cargo.toml  api.hurl  readme.md
js-rusty-v8/src/: js.rs  main.rs
openapi-aide/: Cargo.toml  api.http  readme.md
openapi-aide/src/: main.rs
openapi-utoipa/: Cargo.toml  readme.md
openapi-utoipa/src/: main.rs
