[package]
name = "auth-axum-login"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.58"
anyhow = "1.0.82"

dotenvy = "0.15.7"
envy = "0.4.2"

tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
axum = { version = "0.7.5", features = ['macros'] }
axum-macros = "0.4.1"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

uuid = { version = "1.8.0", features = ["v4", "v7", "fast-rng", "serde"] }
chrono = { version = "0.4.37", features = ["serde"] }

lazy_static = "1.5.0"

rusqlite = { version = "0.31.0", features = [
  "bundled",
  "chrono",
  "uuid",
  "serde_json",
  "functions",
  "blob",
] }
rusqlite_migration = { version = "1.2.0", features = [] }
tokio-rusqlite = "0.5.1"

tower-sessions = { version = "0.12.2", features = ["signed", "private"] }
tower-sessions-rusqlite-store = "0.12.0"

axum-login = "0.15.1"
oauth2 = "4.4.2"

axum-htmx = "0.5.0"
minijinja = "2.1.1"
minijinja-embed = "2.1.2"

reqwest = { version = "0.12.4", features = ["json"] }

[build-dependencies]
minijinja-embed = "2.1.2"
