[package]
name = "crud-sqlite-openapi"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
thiserror = "1.0.58"

dotenvy = "0.15.7"
envy = "0.4.2"

tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
axum = { version = "0.7.5", features = ['macros'] }
axum-macros = "0.4.1"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
console-subscriber = "0.4.0"

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

uuid = { version = "1.8.0", features = ["v4", "v7", "fast-rng", "serde"] }
chrono = { version = "0.4.37", features = ["serde"] }
rand = "0.8.5"

lazy_static = "1.5.0"

rusqlite = { version = "0.31.0", features = [
  "bundled",
  "chrono",
  "uuid",
  "serde_json",
  "functions",
  "blob",
] }
rusqlite_migration = { version = "1.2.0", features = [] }
tokio-rusqlite = "0.5.1"
sea-query = { version = "0.31.0-rc.5" }
sea-query-rusqlite = { version = "0.6.0-rc.1", features = [
  "with-chrono",
  "with-json",
  "with-uuid",
  "with-time",
] }

schemars = { version = "0.8.16", features = ["uuid1", "chrono"] }
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
aide = { version = "0.13.4", features = [
  "scalar",
  "axum",
  "axum-extra",
  "macros",
] }

[dev-dependencies]
axum-test = "15.3.1"
