[package]
name = "js-deno"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.58"
anyhow = "1.0.86"

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.5", features = ['macros'] }
axum-macros = "0.4.1"

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

deno_core = "0.301.0"
deno_ast = { version = "0.41.2", features = ["transpiling"] }

serde_v8 = "0.210.0"
crossbeam-channel = "0.5.13"
