[package]
name = "openapi-aide"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.58"

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.5", features = ['macros'] }
axum-macros = "0.4.1"

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

uuid = { version = "1.8.0", features = ["v4", "v7", "fast-rng", "serde"] }

schemars = { version = "0.8.16", features = ["uuid1", "chrono"] }
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
aide = { version = "0.13.4", features = [
  "redoc",
  "axum",
  "axum-extra",
  "macros",
] }

serde_yaml = "0.9.34"
