[package]
name = "openapi-utoipa"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.58"
anyhow = "1.0.86"

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.5", features = ['macros'] }
axum-macros = "0.4.1"

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
